examples/results/20260104_211128/command_output.txt
第1个周期 [2023-11-26 至 2023-12-02]
系统：eps,big
Welcome to PowerBiMIP V0.1.0 | © 2025 Yemin Wu, Southeast University
Open-source, efficient tools for power and energy system bilevel mixed-integer programming.
GitHub: https://github.com/GreatTM/PowerBiMIP
Docs:   https://docs.powerbimip.com
Bilevel optimization interface
--------------------------------------------------------------------------
User-specified options:
  method          = 'eaxct_KKT'
  verbose         = 2
  plot__verbose   = 1
  optimal_gap     = 0.001
  penalty_rho     = 10000
--------------------------------------------------------------------------
Starting disciplined bilevel programming process...
Original model type: OBL-CC-1
Initial model has coupled constraints, but they do NOT require transformation.
There are no linking variables in coupled constraints.
Skipping transformation. Coupled constraints will be handled in subproblems.
Disciplined bilevel programming process completed.
Final Model type: OBL-CC-1
Problem Statistics:
  Upper-Level Constraints: 76114 (75946 ineq, 168 eq), 151724 non-zeros
  Lower-Level Constraints: 76104 (68376 ineq, 7728 eq), 129549 non-zeros
  Variables (Total): 86530 continuous, 22680 integer (22680 binary)
Coefficient Ranges:
  Matrix Coefficients: [9.8e-01, 2.9e+01]
  Objective Coefficients: [1.0e+01, 1.0e+03]
  RHS Values:          [3.9e-01, 5.6e+01]
--------------------------------------------------------------------------
Solving with optimistic perspective...

-----------------------------------------------------------------------------------------------
  Iter |       MP Obj     SP1 Obj     SP2 Obj |          LB          UB         Gap |  Time(s)
-----------------------------------------------------------------------------------------------
{Error using <a href="matlab:matlab.lang.internal.introspective.errorDocCallback('optimistic_solver', 'E:\3. Toolbox\PowerBiMIP\src\core\BiMIP_solver\optimistic_solver.m', 102)" style="font-weight:bold">optimistic_solver</a> (<a href="matlab: opentoline('E:\3. Toolbox\PowerBiMIP\src\core\BiMIP_solver\optimistic_solver.m',102,0)">line 102</a>)
Unknown method selected in options.
Error in <a href="matlab:matlab.lang.internal.introspective.errorDocCallback('solver_algorithm', 'E:\3. Toolbox\PowerBiMIP\src\core\BiMIP_solver\solver_algorithm.m', 21)" style="font-weight:bold">solver_algorithm</a> (<a href="matlab: opentoline('E:\3. Toolbox\PowerBiMIP\src\core\BiMIP_solver\solver_algorithm.m',21,0)">line 21</a>)
        BiMIP_record = optimistic_solver(model, ops);
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in <a href="matlab:matlab.lang.internal.introspective.errorDocCallback('solve_BiMIP', 'E:\3. Toolbox\PowerBiMIP\src\core\BiMIP_solver\solve_BiMIP.m', 240)" style="font-weight:bold">solve_BiMIP</a> (<a href="matlab: opentoline('E:\3. Toolbox\PowerBiMIP\src\core\BiMIP_solver\solve_BiMIP.m',240,0)">line 240</a>)
    BiMIP_record = solver_algorithm(model_processed, ops);
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in <a href="matlab:matlab.lang.internal.introspective.errorDocCallback('main_Centralized_SPO', 'E:\3. Toolbox\PowerBiMIP\examples\SPO\main_Centralized_SPO.m', 104)" style="font-weight:bold">main_Centralized_SPO</a> (<a href="matlab: opentoline('E:\3. Toolbox\PowerBiMIP\examples\SPO\main_Centralized_SPO.m',104,0)">line 104</a>)
        [Solution, BiMIP_record] = solve_BiMIP(model, ops);
                                   ^^^^^^^^^^^^^^^^^^^^^^^} 
main_Centralized_SPO
